[package]
name = "escpos-rust"
version = "0.0.1"
license = "MIT"
description = "Control esc/pos printers with rust update from escpos-rs"
repository = "https://github.com/EmiyaGm/escpos-rust.git"
authors = ["EmiyaGm <464723943@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.2"
log = "0.4.14"
serde = {version = "1.0.117", features = ["derive"]}
codepage-437 = "0.1.0"
image = "0.23.14"
base64 = "0.13.0"
qrcode = "0.12.0"
encoding = "0.2.33"